# template

./: .gitignore  config.py  prepare.py  program.md  pyproject.toml  run_modal.py  train.py
.druids/: autoresearch-codex.py  autoresearch-multi.py  autoresearch-protein.py  autoresearch-v2.py
curriculum/: dashboard.html  observations.md  plan.md
research/: dashboard.html  observations.md  plan.md
