[project]
name = "autoresearch-template"
version = "0.1.0"
description = "From-scratch autonomous pretraining research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "druids",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "modal>=0.75.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1; sys_platform != 'darwin'",
    "torch>=2.9.1; sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
